tests/negative/path_traversal_absolute_unix.uzpp
// XATOLIK_KUTILMOQDA: path_traversal: mutlaq POSIX yo'l
ulash "/etc/shadow"
butun asosiy() { qaytarish 0; }
